--- a/angular.json
+++ b/angular.json
@@ -32,6 +32,7 @@
             "inlineStyleLanguage": "scss",
             "assets": [
               "src/favicon.ico",
+              "src/assets",
               {
                 "glob": "**/*",
                 "input": "src/assets",
@@ -72,35 +73,37 @@
                 "src/assets"
               ]
             },
-            "context1": {
+            "meteoblue": {
               "fileReplacements": [
                 {
                   "replace": "src/environments/environment.ts",
-                  "with": "src/environments/environment1.ts"
+                  "with": "src/environments/environment-meteoblue.ts"
                 }
               ],
               "assets": [
                 "src/favicon.ico",
+                "src/assets",
                 {
                   "glob": "**/*",
-                  "input": "src/assets-context1",
-                  "output": "/assets-context1"
+                  "input": "src/assets-meteoblue",
+                  "output": "/assets-meteoblue"
                 }
               ]
             },
-            "context2": {
+            "campo": {
               "fileReplacements": [
                 {
                   "replace": "src/environments/environment.ts",
-                  "with": "src/environments/environment2.ts"
+                  "with": "src/environments/environment-campo.ts"
                 }
               ],
               "assets": [
                 "src/favicon.ico",
+                "src/assets",
                 {
                   "glob": "**/*",
-                  "input": "src/assets-context2",
-                  "output": "/assets-context2"
+                  "input": "src/assets-campo",
+                  "output": "/assets-campo"
                 }
               ]
             }
@@ -119,11 +122,11 @@
             "development-pt": {
               "browserTarget": "land-media:build:development,pt"
             },
-            "development-context1": {
-              "browserTarget": "land-media:build:development,context1"
+            "development-meteoblue": {
+              "browserTarget": "land-media:build:development,meteoblue"
             },
-            "development-context2": {
-              "browserTarget": "land-media:build:development,context2"
+            "development-campo": {
+              "browserTarget": "land-media:build:development,campo"
             }
           },
           "defaultConfiguration": "development-pt"
