--- a/angular.json
+++ b/angular.json
@@ -106,6 +106,57 @@
                   "output": "/assets-campo"
                 }
               ]
+            },
+            "cidade": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment-cidade.ts"
+                }
+              ],
+              "assets": [
+                "src/favicon.ico",
+                "src/assets",
+                {
+                  "glob": "**/*",
+                  "input": "src/assets-cidade",
+                  "output": "/assets-cidade"
+                }
+              ]
+            },
+            "mcn": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment-mcn.ts"
+                }
+              ],
+              "assets": [
+                "src/favicon.ico",
+                "src/assets",
+                {
+                  "glob": "**/*",
+                  "input": "src/assets-mcn",
+                  "output": "/assets-mcn"
+                }
+              ]
+            },
+            "goclim": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment-goclim.ts"
+                }
+              ],
+              "assets": [
+                "src/favicon.ico",
+                "src/assets",
+                {
+                  "glob": "**/*",
+                  "input": "src/assets-goclim",
+                  "output": "/assets-goclim"
+                }
+              ]
             }
           },
           "defaultConfiguration": "production"
@@ -127,6 +178,15 @@
             },
             "development-campo": {
               "browserTarget": "land-media:build:development,campo"
+            },
+            "development-cidade": {
+              "browserTarget": "land-media:build:development,cidade"
+            },
+            "development-mcn": {
+              "browserTarget": "land-media:build:development,mcn"
+            },
+            "development-goclim": {
+              "browserTarget": "land-media:build:development,goclim"
             }
           },
           "defaultConfiguration": "development-pt"
